--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,35 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+
+# Flutter/Dart/Pub related
+.dart_tool/
+.flutter-plugins
+.flutter-plugins-dependencies
+.packages
+.pub-cache/
+.pub/
+
+# Android related
+/android/.gradle/
+/android/local.properties
+/android/app/google-services.json
+/build/
+/android/app/build/
+
+# iOS related
+/ios/Flutter/Flutter.framework
+/ios/Flutter/Flutter.podspec
+/ios/.symlinks/
+/ios/Pods/
+/ios/build/
+/ios/Runner/GeneratedPluginRegistrant.*
+
+# Web related
+/web/.dart_tool/
+/web/build/
+
+# Other
+.idea/
+.vscode/
